# neosnatch

./: Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
contrib/: config.example.toml  neosnatch.sh
debian/: changelog  control  copyright  neosnatch-snapshot.service  neosnatch-snapshot.timer  postinst  postrm  prerm  rules
rpm/: post.sh  postun.sh  preun.sh
scripts/: build-deb.sh  build-rpm.sh  build-tarball.sh
src/: cache.rs  cli.rs  config.rs  main.rs  snapshot.rs
src/collect/: advisories.rs  cpu.rs  cron.rs  demo.rs  disk.rs  docker.rs  encryption.rs  gpu.rs  host.rs  mem.rs  mod.rs  net.rs  os.rs  packages.rs  ports.rs  processes.rs  public_ip.rs  services.rs  sessions.rs  shell.rs  sudoers.rs  systemd.rs  uptime.rs
src/render/: bar.rs  color.rs  format.rs  logo.rs  mod.rs
