[package]
name = "neosnatch"
version = "0.7.0"
edition = "2021"
description = "Not your Daddy's Neofetch"
license = "MIT"

[[bin]]
name = "neosnatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
thiserror = "1"
owo-colors = "4"
nix = { version = "0.29", features = ["fs", "user", "net", "socket"] }
libc = "0.2"
rustix = { version = "0.38", features = ["fs", "system"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
terminal_size = "0.4"
once_cell = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

# RPM packaging (consumed by `cargo generate-rpm`).
[package.metadata.generate-rpm]
summary = "Sysadmin login banner — single-binary Rust rewrite of neofetch"
license = "MIT"
assets = [
    { source = "target/release/neosnatch",                  dest = "/usr/bin/neosnatch",                                              mode = "755" },
    { source = "contrib/neosnatch.sh",                      dest = "/etc/profile.d/neosnatch.sh",                                     mode = "644", config = true },
    { source = "contrib/config.example.toml",               dest = "/etc/neosnatch/config.toml.example",                              mode = "644" },
    { source = "debian/neosnatch-snapshot.service",         dest = "/usr/lib/systemd/system/neosnatch-snapshot.service",              mode = "644" },
    { source = "debian/neosnatch-snapshot.timer",           dest = "/usr/lib/systemd/system/neosnatch-snapshot.timer",                mode = "644" },
    { source = "debian/copyright",                          dest = "/usr/share/doc/neosnatch/copyright",                              mode = "644", doc = true },
]
post_install_script = "rpm/post.sh"
pre_uninstall_script = "rpm/preun.sh"
post_uninstall_script = "rpm/postun.sh"

[package.metadata.generate-rpm.requires]
glibc = "*"
